# Lya_Px

./: README.md  pyproject.toml  requirements.txt
configs/: config.ini
examples/: redshifts.txt  theta_values.txt  theta_values_copy.txt
notebooks/: compare_Gaussian_skewers.ipynb
px_test/: pyvenv.cfg
src/Lya_Px/: auxiliary.py  avg_healpix.py  compute_p1d.py  compute_px.py  config.py  functions.py  gaussian_skewers.py  main.py  make_skewers.py  normalization.py  params.py  post-processing.py  post_processing.py  px_from_pix.py  px_from_skewers.py  read_inputs.py  skewer_maker.py  theta_values.txt
src/Lya_Px.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/Lya_Px/.ipynb_checkpoints/: main-checkpoint.py  px_from_pix-checkpoint.py
tests/: healpix_list.txt
