[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Lya_Px"
version = "0.1.0"
description = "A python package for measuring Lyman-alpha cross power spectra."
authors = [
    { name="Sindhu Satyavolu", email="sindhusatyavolu@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "numpy",
    "matplotlib",
    "astropy",
    "h5py",
    "argparse"
    "fitsio"
]

[project.scripts]
lyapx-main = "Lya_Px.main:main"
lyapx-post = "Lya_Px.post_processing:main"

